--- a/css/style.css
+++ b/css/style.css
@@ -578,7 +578,7 @@ ul.portfolio li.active {
   opacity: 0;
   left: 0%;
   right: 0%;
-  background-color: #24b662;
+  background-color: #ffffff;
   width: 70px;
   height: 70px;
   border-radius: 50%;
