--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,7 @@ fieldset {
 .section-title h2 {
     margin-top: 0;
     font-weight: 600;
-    border-bottom: 4px double #24b662;
+    border-bottom: 4px double #ffffff;
 	border-radius: 25px;
     font-size: 30px;
     margin: 0 auto;
