--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,8 @@
    
     Template Name : Rolling - Freelancer Portfolio Template
     Author : UiPasta Team
-    Website : http://www.uipasta.com/
-    Support : http://www.uipasta.com/support/
+    Website : https://www.uipasta.com/
+    Support : https://www.uipasta.com/contact-us/
 	
 	
 */
@@ -53,12 +53,12 @@ body {
 }
 
 ::selection {
-    background-color: #24b662;
+    background-color: #ffffff;
     color: #ffffff;
 }
 
 ::-moz-selection {
-    background-color: #24b662;
+    background-color: #24;
     color: #ffffff;
 }
 
@@ -120,7 +120,7 @@ fieldset {
 .section-title h2 {
     margin-top: 0;
     font-weight: 600;
-    border-bottom: 4px double #ffffff;
+    border-bottom: 4px double #FFF000;
 	border-radius: 25px;
     font-size: 30px;
     margin: 0 auto;
@@ -195,8 +195,8 @@ fieldset {
 .button-style:hover,
 .button-style:active,
 .button-style:focus {
-	background: #fff;
-	color: #000!important;
+	background: #FFF000;
+	color: #ffffff !important;
 }
 
 .button-style:before {
@@ -211,7 +211,7 @@ fieldset {
 }
 
 .button-style:active:before {
-	color: #111111;
+	color: #17954c;
 }
 
 .button-style-icon:before {
@@ -260,7 +260,7 @@ body.loaded #preloader{
     margin: -75px 0 0 -75px;
     border-radius: 50%;
     border: 3px solid transparent;
-    border-top-color: #ffffff;
+    border-top-color: #FFF000;
     -webkit-animation: spin 2s linear infinite;
     animation: spin 2s linear infinite;
 }
@@ -274,7 +274,7 @@ body.loaded #preloader{
     bottom: 5px;
     border-radius: 50%;
     border: 3px solid transparent;
-    border-top-color: #24b662;
+    border-top-color: #FFF000;
     -webkit-animation: spin 3s linear infinite;
     animation: spin 3s linear infinite;
 }
@@ -288,7 +288,7 @@ body.loaded #preloader{
     bottom: 15px;
     border-radius: 50%;
     border: 3px solid transparent;
-    border-top-color: #24b662;
+    border-top-color: #fff000;
     -webkit-animation: spin 1.5s linear infinite;
     animation: spin 1.5s linear infinite;
 }
@@ -357,9 +357,8 @@ body.loaded #preloader{
     vertical-align: middle;
 }
 
-.header-text {}
 
-.home-section-background h2 {
+.home-section-background h1 {
     color: #f8f8f8;
     font-size: 50px;
     letter-spacing: 5px;
@@ -539,7 +538,7 @@ ul.portfolio li:hover {
 
 ul.portfolio li.active {
     color: #ffffff;
-    background-color: #24b662;
+    background-color: #FFF000;
     padding: 5px 20px;
     border-radius: 20px;
     box-shadow: 0px 1px 2px 0px rgba(90, 91, 95, 0.15);
@@ -578,7 +577,7 @@ ul.portfolio li.active {
   opacity: 0;
   left: 0%;
   right: 0%;
-  background-color: #ffffff;
+  background-color: #FFF000;
   width: 70px;
   height: 70px;
   border-radius: 50%;
@@ -595,7 +594,7 @@ ul.portfolio li.active {
 .mfp-image-holder .mfp-close, .mfp-iframe-holder .mfp-close {
 	margin-top: 40px;
     font-size: 50px;
-    background-color: #24b662;
+    background-color: #FFF000;
     width: 44px;
 	right: 0px;
 }
@@ -634,10 +633,10 @@ ul.portfolio li.active {
     max-width: 140px;
 }
 
-.testimonial-word h2 {
+.testimonial-word h3 {
     font-size: 12px;
     text-transform: uppercase;
-	color: #24b662;
+	color: #FFF000;
     font-weight: 700;
     letter-spacing: 4px;
     margin: 20px 0px;
@@ -648,7 +647,7 @@ ul.portfolio li.active {
 }
 
 .owl-navi {
-	color: #24b662;
+	color: #FFF000;
 }
 
 .owl-navi:hover {
@@ -705,7 +704,7 @@ ul.portfolio li.active {
   text-align: left;
 }
 
-.statistics-content > h5 {
+.statistics-content > h3 {
   font-size: 34px;
   margin-top: 0;
 }
@@ -726,7 +725,7 @@ ul.portfolio li.active {
 }
 
 .services-section hr {
-  border-bottom: 2px solid #24b662;
+  border-bottom: 2px solid #FFF000;
   width: 42px;
   margin-left: 0px;
 }
@@ -757,10 +756,8 @@ ul.portfolio li.active {
 
 /* Call to Action */
 
-.call-to-action {
-}
 
-.call-to-action h2 {
+.call-to-action h3 {
 	font-size: 30px;
 }
 
@@ -768,13 +765,75 @@ ul.portfolio li.active {
 
 /* Contact Us */
 
-/*------------------------------------------------------------------
-  	[Contact]
-------------------------------------------------------------------*/
-.contact-list > li {
-  font-size: 13px;
-  color: #81848f;
-  margin-bottom: 10px;
+.contact-us {
+	background-color: #f9f9f9;
+}
+
+.contact-us-detail {
+}
+
+.contact-us-detail i {
+	font-size: 30px;
+    margin-bottom: 10px;
+    background-color: #fff;
+    border-radius: 50%;
+    box-shadow: 0px 1px 2px 0px rgba(90, 91, 95, 0.15);
+	transition: all 0.3s ease-in-out;
+    width: 88px;
+    height: 88px;
+    line-height: 88px;
+}
+
+.contact-us-detail:hover i {
+	box-shadow: 0px 8px 15px 0px rgba(90, 91, 95, 0.33);
+    margin-top: -5px;
+}
+
+.contact-us-detail a {
+	color: #333;
+}
+
+.contact-us-detail a:hover {
+	color: #333;
+}
+
+.form-group {
+	margin-bottom: 25px;
+}
+
+.form-control {
+	border: 2px solid transparent;
+	height: 50px;
+	border-radius: 2px; -webkit-border-radius: 2px; -moz-border-radius: 2px; -ms-border-radius: 2px; -o-border-radius: 2px;
+	-webkit-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.14);
+	   -moz-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.14);
+	    -ms-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.14);
+		 -o-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.14);
+			box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.14);
+	-webkit-transition:all 150ms ease-in-out 0s;
+	   -moz-transition:all 150ms ease-in-out 0s;
+	    -ms-transition:all 150ms ease-in-out 0s;
+	     -o-transition:all 150ms ease-in-out 0s;
+		    transition:all 150ms ease-in-out 0s;
+}
+.form-control:focus {
+	border-color: #171717;
+	-webkit-box-shadow: none;
+	   -moz-box-shadow: none;
+	    -ms-box-shadow: none;
+		 -o-box-shadow: none;
+			box-shadow: none;
+}
+
+.form-control:focus {
+	border-color: #FFF000;
+	border-width: 2px;
+}
+
+.map {
+    width: 100%;
+    height: 340px;
+    border: 1px solid #FFF000;
 }
 
 
@@ -959,10 +1018,10 @@ ul.portfolio li.active {
         padding: 11px 15px;
     }
     .navigation-menu .navbar-nav li a:hover {
-        color: #24b662;
+        color: #FFF000;
     }
     .navigation-background .navigation-menu .navbar-nav li a:hover {
-        color: #24b662;
+        color: #FFF000;
     }
     .navigation-background .navigation-menu .navbar-nav li a {
         padding: 11px 15px;
@@ -1058,7 +1117,7 @@ ul.portfolio li.active {
 /* Scroll To Top */
 
 .scroll-to-top {
-    background-color: #24b662;
+    background-color: #FFF000;
     display: none;
     width: 50px;
     height: 50px;
@@ -1398,7 +1457,7 @@ ul.portfolio li.active {
 }
 
 .uipasta-credit a {
-    color: #24b662;
+    color: #FFF000;
     font-weight: 600;
 }
 
