--- a/css/style.css
+++ b/css/style.css
@@ -53,12 +53,12 @@ body {
 }
 
 ::selection {
-    background-color: #ffffff;
+    background-color: #24b662;
     color: #ffffff;
 }
 
 ::-moz-selection {
-    background-color: #24;
+    background-color: #24b662;
     color: #ffffff;
 }
 
@@ -120,7 +120,7 @@ fieldset {
 .section-title h2 {
     margin-top: 0;
     font-weight: 600;
-    border-bottom: 4px double #FFF000;
+    border-bottom: 4px double #FFFFFF;
 	border-radius: 25px;
     font-size: 30px;
     margin: 0 auto;
@@ -195,7 +195,7 @@ fieldset {
 .button-style:hover,
 .button-style:active,
 .button-style:focus {
-	background: #FFF000;
+	background: #24b662;
 	color: #ffffff !important;
 }
 
@@ -260,7 +260,7 @@ body.loaded #preloader{
     margin: -75px 0 0 -75px;
     border-radius: 50%;
     border: 3px solid transparent;
-    border-top-color: #FFF000;
+    border-top-color: #24b662;
     -webkit-animation: spin 2s linear infinite;
     animation: spin 2s linear infinite;
 }
@@ -274,7 +274,7 @@ body.loaded #preloader{
     bottom: 5px;
     border-radius: 50%;
     border: 3px solid transparent;
-    border-top-color: #FFF000;
+    border-top-color: #24b662;
     -webkit-animation: spin 3s linear infinite;
     animation: spin 3s linear infinite;
 }
@@ -288,7 +288,7 @@ body.loaded #preloader{
     bottom: 15px;
     border-radius: 50%;
     border: 3px solid transparent;
-    border-top-color: #fff000;
+    border-top-color: #24b662;
     -webkit-animation: spin 1.5s linear infinite;
     animation: spin 1.5s linear infinite;
 }
@@ -538,7 +538,7 @@ ul.portfolio li:hover {
 
 ul.portfolio li.active {
     color: #ffffff;
-    background-color: #FFF000;
+    background-color: #24b662;
     padding: 5px 20px;
     border-radius: 20px;
     box-shadow: 0px 1px 2px 0px rgba(90, 91, 95, 0.15);
@@ -577,7 +577,7 @@ ul.portfolio li.active {
   opacity: 0;
   left: 0%;
   right: 0%;
-  background-color: #FFF000;
+  background-color: #24b662;
   width: 70px;
   height: 70px;
   border-radius: 50%;
@@ -594,7 +594,7 @@ ul.portfolio li.active {
 .mfp-image-holder .mfp-close, .mfp-iframe-holder .mfp-close {
 	margin-top: 40px;
     font-size: 50px;
-    background-color: #FFF000;
+    background-color: #24b662;
     width: 44px;
 	right: 0px;
 }
@@ -636,7 +636,7 @@ ul.portfolio li.active {
 .testimonial-word h3 {
     font-size: 12px;
     text-transform: uppercase;
-	color: #FFF000;
+	color: #24b662;
     font-weight: 700;
     letter-spacing: 4px;
     margin: 20px 0px;
@@ -647,7 +647,7 @@ ul.portfolio li.active {
 }
 
 .owl-navi {
-	color: #FFF000;
+	color: #24b662;
 }
 
 .owl-navi:hover {
@@ -725,7 +725,7 @@ ul.portfolio li.active {
 }
 
 .services-section hr {
-  border-bottom: 2px solid #FFF000;
+  border-bottom: 2px solid #24b662;
   width: 42px;
   margin-left: 0px;
 }
@@ -826,14 +826,14 @@ ul.portfolio li.active {
 }
 
 .form-control:focus {
-	border-color: #FFF000;
+	border-color: #24b662;
 	border-width: 2px;
 }
 
 .map {
     width: 100%;
     height: 340px;
-    border: 1px solid #FFF000;
+    border: 1px solid #24b662;
 }
 
 
@@ -1018,10 +1018,10 @@ ul.portfolio li.active {
         padding: 11px 15px;
     }
     .navigation-menu .navbar-nav li a:hover {
-        color: #FFF000;
+        color: #24b662;
     }
     .navigation-background .navigation-menu .navbar-nav li a:hover {
-        color: #FFF000;
+        color: #24b662;
     }
     .navigation-background .navigation-menu .navbar-nav li a {
         padding: 11px 15px;
@@ -1117,7 +1117,7 @@ ul.portfolio li.active {
 /* Scroll To Top */
 
 .scroll-to-top {
-    background-color: #FFF000;
+    background-color: #24b662;
     display: none;
     width: 50px;
     height: 50px;
@@ -1457,7 +1457,7 @@ ul.portfolio li.active {
 }
 
 .uipasta-credit a {
-    color: #FFF000;
+    color: #24b662;
     font-weight: 600;
 }
 
